--- a/HelperAgency.dproj
+++ b/HelperAgency.dproj
@@ -83,8 +83,11 @@
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
 			<DCCReference Include="uMainForm.pas">
-				<Form>Form1</Form>
+				<Form>MainForm</Form>
 				<FormType>dfm</FormType>
+			</DCCReference>
+			<DCCReference Include="uInputForm.pas">
+				<Form>InputForm</Form>
 			</DCCReference>
 			<DCCReference Include="uHandlerAds.pas"/>
 			<BuildConfiguration Include="Release">
@@ -134,6 +137,10 @@
 					<Source>
 						<Source Name="MainSource">HelperAgency.dpr</Source>
 					</Source>
+					<Excluded_Packages>
+						<Excluded_Packages Name="$(BDSBIN)\dcloffice2k160.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+						<Excluded_Packages Name="$(BDSBIN)\dclofficexp160.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+					</Excluded_Packages>
 				</Delphi.Personality>
 				<Deployment/>
 				<Platforms>
