Форма ввода телефона InputTelephonesForm и функционал, добавил опцию MB_DEFBUTTON2 в диалоги.

--- a/HelperAgency.dproj
+++ b/HelperAgency.dproj
@@ -92,6 +92,9 @@
 			<DCCReference Include="uEditForm.pas">
 				<Form>EditForm</Form>
 			</DCCReference>
+			<DCCReference Include="uInputTelephonesForm.pas">
+				<Form>InputTelephonesForm</Form>
+			</DCCReference>
 			<DCCReference Include="uMainDM.pas">
 				<Form>MainDM</Form>
 				<DesignClass>TDataModule</DesignClass>
